--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: java
 jdk:
   - oraclejdk8
 
-install: mvn install -U -DskipTests=true
+install: mvn clean install -U -DskipTests=true
 
 script: mvn verify -U -Dmaven.javadoc.skip=true
 
